<resources>
    <string name="app_name">RecipeKeeper</string>
    <string name="txtTitle">Recipe Keeper by Aaronne Dela Cruz</string>
    <string name="btnAddRecipe">Add Recipe Name</string>
    <string name="btnAddIngredients">Add Ingredients</string>
    <string name="btnAddInstructions">Add Instructions</string>

    <string name="edtRecipeName"> Enter Recipe Name</string>
    <string name="edtIngredients"> Enter Ingredients</string>
    <string name="editInstructions"> Enter Instructions</string>

    <string name="edtRecipeArea">. </string>

    <string name="btnSaveRecipe">Save Recipe</string>
    <string name="btnClear">Clear All</string>

</resources>