<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="30dp"
        android:background="#ECD0AE"
        android:padding="8dp"
        android:text="@string/txtTitle"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddRecipe"
        android:layout_width="128dp"
        android:layout_height="58dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:text="@string/btnAddRecipe"
        app:layout_constraintEnd_toStartOf="@+id/edtRecipeName"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/edtRecipeName"
        android:layout_width="212dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="31dp"
        android:background="#ECD0AE"
        android:ems="10"
        android:hint="@string/edtRecipeName"
        android:inputType="text"
        android:padding="8dp"
        android:textColorHint="#99000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/edtRecipeArea"
        android:layout_width="351dp"
        android:layout_height="382dp"
        android:layout_marginTop="28dp"
        android:background="#ECD0AE"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edtRecipeArea"
        android:inputType="text|textMultiLine"
        android:padding="8dp"
        android:textColor="#000000"
        android:textColorLink="#39532B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtInstructions" />

    <EditText
        android:id="@+id/edtIngredients"
        android:layout_width="212dp"
        android:layout_height="58dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:background="#ECD0AE"
        android:ems="10"
        android:hint="@string/edtIngredients"
        android:inputType="text"
        android:padding="8dp"
        android:textColorHint="#99000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRecipeName" />

    <EditText
        android:id="@+id/edtInstructions"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:background="#ECD0AE"
        android:ems="10"
        android:hint="@string/editInstructions"
        android:inputType="text"
        android:padding="8dp"
        android:textColorHint="#99000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtIngredients" />

    <Button
        android:id="@+id/btnAddIngredients"
        android:layout_width="128dp"
        android:layout_height="58dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnAddIngredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddRecipe" />

    <Button
        android:id="@+id/btnAddInstructions"
        android:layout_width="128dp"
        android:layout_height="58dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnAddInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddIngredients" />

    <Button
        android:id="@+id/btnSaveRecipe"
        android:layout_width="148dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/btnSaveRecipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRecipeArea" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="148dp"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRecipeArea" />

</androidx.constraintlayout.widget.ConstraintLayout>